Added New Abilities